--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C96LYC1CT2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-C96LYC1CT2');
+    </script>   
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
